# ai-pulse

./: .gitignore  .vercelignore  DESIGN_DISCUSSION.md  README.md  SKILL.md  app.js  index.html  pyproject.toml  style.css  vercel.json
.github/workflows/: daily-brief.yml
data/: brief.json
docs/: CRONJOB_and_HOSTING.md
scripts/: fetch_brief.py
tests/: conftest.py  test_fetch_brief.py
