[project]
name = "ai-pulse"
version = "0.1.0"
description = "A daily brief and interactive playground dashboard for AI news, models, and concepts designed for young learners."
authors = [
    { name = "Harsh Vyas" }
]
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.5.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
